--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<title>YAY</title>
+		<title>Project Cuttlefish</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-default">
@@ -17,7 +17,7 @@
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-				<a class="navbar-brand" href="#">Brand</a>
+				<a class="navbar-brand" href="#">Project Cuttlefish</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
