--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8"/>
+		<!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		
+		<!-- BootStrap -->
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+		
+		<script src="js/touchable.js"></script>
+		
+		<!-- Material Design for Bootstrap -->
+		<link href="md-css/roboto.min.css" rel="stylesheet">
+        <link href="md-css/material.min.css" rel="stylesheet">
+        <link href="md-css/ripples.min.css" rel="stylesheet">
+		<script src="md-js/ripples.min.js"></script>
+        <script src="md-js/material.min.js"></script>
+		
+		<!-- Our CSS -->
 		<link rel="stylesheet" href="css/components.css"/>
 		<link rel="stylesheet" href="css/studentviews.css"/>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		
+		<!-- Our JS -->
 		<script src="js/class.js"></script>
 		<script src="js/stdobjs.js"></script>
 		<script src="js/studentobjs.js"></script>
+		<script src="js/touch.js"></script>
 		<script src="js/index.js"></script>
+		
+		
 		<title>Project Cuttlefish</title>
 	</head>
 	<body>
@@ -23,24 +44,22 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Project Cuttlefish | Student</a>
+					<a class="navbar-brand" data-active-hash='#' href="#">Project Cuttlefish | Student</a>
 				</div>
 				
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="navigationbar">
 					<ul class="nav navbar-nav">
-						<li class='active navbar-page-button-schedule' title="What classes you have">
-							<a href="#schedule">Schedule</a>
-						</li>
-						<li class='navbar-dropdown-classlist'>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Classes <span class="caret"></span></a>
-							<ul class="dropdown-menu">
+						<li class='navbar-page-button-schedule dropdown' data-active-hash='#schedule' title="Schedule">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-triggers="hover context" href="#schedule">Schedule</a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#class-1">Class 1</a></li>
 							</ul>
 						</li>
-						<li class='navbar-page-button-assignments' title="What homework you have">
+						<li class='navbar-page-button-assignments' data-active-hash='#assignments' title="Assignments">
 							<a href="#assignments">Assignments <span class="badge badge-left badge-red">50</span><span class="badge badge-right badge-blue">30</span></a>
 						</li>
-						<li class='navbar-page-button-' title="Clubs">
+						<li class='navbar-page-button-clubs' title="Clubs">
 							<a href="clubs">Clubs</a>
 						</li>
 					</ul>
@@ -48,21 +67,23 @@
 			</div>
 		</nav>
 		<div class="pagewrapper fullsize">
-			<div class="jumbotron view view-student view-student-schedule fullsize">
+			<div class="container view view-student view-student-schedule fullsize">
 				<div class="page-header">
 					<h1>Schedule</h1>
 				</div>
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>Period</th>
-							<th>Class</th>
-							<th>Teacher</th>
-						</tr>
-					</thead>
-					<tbody>
-					</tbody>
-				</table>
+				<div class="jumbotron">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Period</th>
+								<th>Class</th>
+								<th>Teacher</th>
+							</tr>
+						</thead>
+						<tbody>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</body>
