Worked on navbar

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,9 +49,9 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="navigationbar">
 					<ul class="nav navbar-nav">
-						<li class='navbar-page-button-schedule dropdown' data-active-hash='#schedule' title="Schedule">
-							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#schedule">Schedule</a>
-							<a class="virtual" href="#schedule" data-nav-action="replace"></a>
+						<li class='navbar-page-button-schedule dropdown' data-active-hash='#schedule' href="#schedule" title="Schedule">
+							<a href="#schedule" data-nav-action="replace">Schedule</a>
+							<a class="dropdown-toggle virtual" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#schedule">Schedule</a>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#class-1">Class 1</a></li>
 								<li><a href="#class-2">Class 2</a></li>
