--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,9 +12,9 @@
 		
 		
 		<!-- Material Design for Bootstrap -->
-		<link href="md-css/roboto.min.css" rel="stylesheet">
-        <link href="md-css/material.min.css" rel="stylesheet">
-        <link href="md-css/ripples.min.css" rel="stylesheet">
+		<link href="md-css/roboto.min.css" rel="stylesheet"/>
+        <link href="md-css/material.min.css" rel="stylesheet"/>
+        <link href="md-css/ripples.min.css" rel="stylesheet"/>
 		<script src="md-js/ripples.min.js"></script>
         <script src="md-js/material.min.js"></script>
 		
@@ -49,10 +49,9 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="navigationbar">
 					<ul class="nav navbar-nav">
-						<li class='navbar-page-button-schedule dropdown' data-active-hash='#schedule' href="#schedule" title="Schedule">
-							<a href="#schedule" data-nav-action="replace">Schedule</a>
-							<a class="dropdown-toggle virtual" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#schedule">Schedule</a>
-							<ul class="dropdown-menu" role="menu">
+						<li class='navbar-page-button-schedule dropdown dropdown-slow-close' tabindex="-1" data-active-hash='#schedule' aria-expanded="false" aria-haspopup="true" href="#schedule" title="Schedule">
+							<a class="dropdown-toggle" role="button" data-nofocus="true" data-no-menu='true' href="#schedule">Schedule</a>
+							<ul class="dropdown-menu fold-out" role="menu">
 								<li><a href="#class-1">Class 1</a></li>
 								<li><a href="#class-2">Class 2</a></li>
 								<li><a href="#class-3">Class 3</a></li>
@@ -70,17 +69,63 @@
 			</div>
 		</nav>
 		<div class="pagewrapper fullsize">
+			<div class="container view view-student view-teacher view-login fullsize active">
+				<div class="page-header">
+					
+				</div>
+					<form class="jumbotron form-horizontal">
+						<fieldset>
+							<div class="form-group form-group-username">
+								<input type="text" class="form-control floating-label" id="inputUsername" name="username" placeholder="Username"/>
+							</div>
+							<div class="form-group form-group-password">
+								<input type="password" class="form-control floating-label" id="inputPassword" placeholder="Password">
+							</div>
+							<div class="form-group form-group-buttons">
+								<button class="btn btn-default">Cancel</button>
+								<button class="btn btn-primary">Submit</button>
+							</div>
+						</fieldset>
+					</form>
+			</div>
 			<div class="container view view-student view-student-schedule fullsize">
 				<div class="page-header">
 					<h1>Schedule</h1>
 				</div>
 				<div class="jumbotron">
-					<table class="table table-hover">
+					<ul class="pager">
+						<li class="previous"><a href="#"><span aria-hidden="true">&larr;</span></a></li>
+						<li style="display: inline-block;"><h2 style="margin:0;">Monday, whatever</h2></li>
+						<li class="next"><a href="#"><span aria-hidden="true">&rarr;</span></a></li>
+					</ul>
+					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
+								<th>Time</th>
 								<th>Period</th>
 								<th>Class</th>
 								<th>Teacher</th>
+							</tr>
+						</thead>
+						<tbody>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<div class="container view view-student view-student-assignments fullsize">
+				<div class="page-header">
+					<h1>Assignments</h1>
+				</div>
+				<div class="jumbotron">
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Class</th>
+								<th>Type</th>
+								<th>Name</th>
+								<th>Assigned</th>
+								<th>Due</th>
+								<th>Status</th>
 							</tr>
 						</thead>
 						<tbody>
