--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,6 +21,7 @@
 		<script src="js/index.js"></script>
 		
 		<!-- Components -->
+		<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
 		<link rel="import" href="components/pc/pc-loader.html"/>
 		<title>Project Cuttlefish</title>
 		<pc-loader target='["pc-stage","paper-drawer-panel"]'></pc-loader>
