--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 		<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
 		<link rel="import" href="components/pc/pc-loader.html"/>
 		<title>Project Cuttlefish</title>
-		<pc-loader target='["pc-stage","paper-drawer-panel"]'></pc-loader>
+		<pc-loader target='["pc-stage","pc-sidebar","paper-drawer-panel","paper-button"]'></pc-loader>
 	</head>
 	<body unresolved>
 		<pc-stage></pc-stage>
