--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,10 +21,13 @@
 		<script src="js/index.js"></script>
 		
 		<!-- Components -->
-		<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
 		<link rel="import" href="components/pc/pc-loader.html"/>
+		
+		<!-- Icons -->
+		<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
+		<link rel="import" href="components/iron/iron-icons/social-icons.html"/>
 		<title>Project Cuttlefish</title>
-		<pc-loader target='["pc-stage","pc-sidebar","paper-drawer-panel","paper-button"]'></pc-loader>
+		<pc-loader target='pc-stage'></pc-loader>
 	</head>
 	<body unresolved>
 		<pc-stage></pc-stage>
