Worked on schedule

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,13 +9,13 @@
 		<script src="webcomponentsjs/webcomponents-lite.js"></script>
 		
 		<!-- Our JS -->
-		<script src="js/class.js" async defer></script>
-		<script src="js/loader.js" async defer></script>
-		<script src="js/stdobjs.js" async defer></script>
-		<script src="js/studentobjs.js" async defer></script>
-		<script src="js/touch.js" async defer></script>
-		<script src="js/transitions.js" async defer></script>
-		<script src="js/index.js" async defer></script>
+		<script src="js/class.js" defer></script>
+		<script src="js/loader.js" defer></script>
+		<script src="js/stdobjs.js" defer></script>
+		<script src="js/studentobjs.js" defer></script>
+		<script src="js/touch.js" defer></script>
+		<script src="js/transitions.js" defer></script>
+		<script src="js/index.js" defer></script>
 		
 		<!-- Components -->
 		<link rel="import" href="components/pc/pc-loader.html"/>
@@ -31,4 +31,5 @@
 	</body>
 	<!-- Our CSS -->
 	<link rel="stylesheet" href="css/transitions.css"/>
+	<link rel="import" type="css" href="/css/table.css"/>
 </html>
