Redid loader.js, worked on transitions

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8"/>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="https://cdn.rawgit.com/taylorhakes/promise-polyfill/2.1.0/Promise.min.js"></script>
 		
 		<!-- Polymer imports -->
 		<script src="webcomponentsjs/webcomponents-lite.js"></script>
