Made gradients that look bad

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html manifest="/manifest.appcache">
 	<head>
-		<meta charset="UTF-8"/>
+		<link rel="shortcut icon" href="favicon.png">
+                <meta charset="UTF-8"/>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		
