--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
 		
 		<!-- Our JS -->
 		<script src="js/class.js" defer></script>
+		<script src="js/delay.js" defer></script>
 		<script src="js/loader.js" defer></script>
 		<script src="js/transitions.js" defer></script>
 		<script src="js/index.js" defer></script>
