--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 		<script src="https://cdn.rawgit.com/taylorhakes/promise-polyfill/2.1.0/Promise.min.js"></script>
 		
 		<!-- Polymer imports -->
-		<script src="webcomponentsjs/webcomponents-lite.js"></script>
+		<script src="webcomponentsjs/webcomponents.js"></script>
 		
 		<!-- Our JS -->
 		<script src="js/class.js" defer></script>
@@ -21,6 +21,7 @@
 		
 		<!-- Icons -->
 		<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
+		<link rel="import" href="components/iron/iron-icons/av-icons.html"/>
 		<link rel="import" href="components/iron/iron-icons/social-icons.html"/>
 		<title>Project Cuttlefish</title>
 		<pc-loader target='pc-stage'></pc-loader>
