Worked on clubs view
Stage:
- Documented properties
- Removed unused property
Classpage:
- Bugfix for tab initial selection
Clubs:
- Added dynamic loading
- Sped up transition
- Disabled highlighting (maybe undo XOR put it in a global class)
- Removed filler HTML
- Fixed touch events paper-ripple interaction (WIP)
- Removed useless code & imports
Index:
- Removed unused import
- Allowed async loading of scripts (let's see how well this will
work...)
Touch.js:
- Removed dead code

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,11 +10,10 @@
 		<script src="webcomponentsjs/webcomponents.js"></script>
 		
 		<!-- Our JS -->
-		<script src="js/class.js" defer></script>
-		<script src="js/delay.js" defer></script>
-		<script src="js/loader.js" defer></script>
-		<script src="js/transitions.js" defer></script>
-		<script src="js/index.js" defer></script>
+		<script src="js/class.js" async defer></script>
+		<script src="js/delay.js" async defer></script>
+		<script src="js/loader.js" async defer></script>
+		<script src="js/index.js" async defer></script>
 		
 		<!-- Components -->
 		<link rel="import" href="components/pc/pc-loader.html"/>
@@ -25,8 +24,6 @@
 	<body unresolved>
 		<pc-stage></pc-stage>
 	</body>
-	<!-- Our CSS -->
-	<link rel="stylesheet" href="css/transitions.css"/>
 	<!-- Icons -->
 	<link rel="import" href="components/iron/iron-icons/iron-icons.html"/>
 	<link rel="import" href="components/iron/iron-icons/av-icons.html"/>
